// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header matches the snapshot 1`] = `
.c1 {
  max-width: 1080px;
}

.c0 {
  position: relative;
  z-index: 2;
}

.c2 {
  position: absolute;
  top: 5px;
  right: 20px;
  z-index: 101;
}

.c2 button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  cursor: pointer;
}

.c2 button > * {
  vertical-align: middle;
  margin-right: 5px;
}

.c2 button:hover,
.c2 button:focus {
  color: #ec0000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 button:hover svg,
.c2 button:focus svg {
  fill: #ec0000;
}

@media (min-width:1200px) {
  .c0 {
    z-index: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c2 button {
    height: 30px;
  }
}

@media (max-width:720px) {
  .c2 {
    top: 0;
    right: 0;
  }

  .c2 button {
    width: 50px;
    height: 50px;
    padding: 0;
  }

  .c2 .links li {
    margin: 0;
  }

  .c2 .login-adw,
  .c2 span {
    display: none;
  }
}

<div>
  <div
    class="c0"
    data-testid="site-header"
  >
    <div
      class="sc-TOsTZ jhxQdU"
      id="header"
    >
      <header
        class="sc-gzVnrw c1 sc-fAjcbJ eiECdr"
      >
        <h1
          class="sc-kjoXOD jEhmHa"
        >
          <a
            class="sc-bwzfXH gajXgj"
            href="https://localhost:8080/"
          >
            <span
              class="sc-bdVaJa cPtgyk"
            />
          </a>
          <a
            class="sc-gisBJw eoTepN sc-gZMcBi kDLxnL sc-EHOje htmEbB"
            href="https://localhost:8080/"
          >
            Registraties
          </a>
        </h1>
        <nav
          class="sc-cHGsZl dFLCjq"
        >
          <nav
            class="no-print c2"
          >
            <ul
              class="links horizontal"
            >
              <li>
                <button
                  class="login"
                  type="button"
                >
                  <svg
                    focusable="false"
                    viewBox="0 0 36 36"
                    width="20"
                  >
                    <path
                      d="M20 2v4h10v24H20v4h14V2H20z"
                    />
                    <path
                      d="M18.82 8.81L16 11.64 20.36 16H2v4h18.36L16 24.36l2.82 2.83 9.2-9.19-9.2-9.19z"
                    />
                  </svg>
                  <span>
                    Inloggen
                  </span>
                </button>
              </li>
            </ul>
          </nav>
        </nav>
        <div
          class="sc-caSCKo cVWIld"
        />
      </header>
    </div>
  </div>
</div>
`;

exports[`Header matches the snapshot 2`] = `
<div>
  <div
    class="Header__HeaderWrapper-sc-15eqjjx-1 eSRqiv"
    data-testid="site-header"
  >
    <div
      class="sc-TOsTZ jhxQdU"
      id="header"
    >
      <header
        class="sc-gzVnrw Header__StyledHeader-sc-15eqjjx-0 NarrX sc-fAjcbJ eiECdr"
      >
        <h1
          class="sc-kjoXOD jEhmHa"
        >
          <a
            class="sc-bwzfXH gajXgj"
            href="https://localhost:8080/"
          >
            <span
              class="sc-bdVaJa cPtgyk"
            />
          </a>
          <a
            class="sc-gisBJw eoTepN sc-gZMcBi kDLxnL sc-EHOje htmEbB"
            href="https://localhost:8080/"
          >
            Registraties
          </a>
        </h1>
        <nav
          class="sc-cHGsZl dFLCjq"
        >
          <nav
            class="no-print Header__StyledNav-sc-15eqjjx-2 aAMtn"
          >
            <ul
              class="links horizontal"
            >
              <li>
                <button
                  type="button"
                >
                  <svg
                    focusable="false"
                    viewBox="0 0 36 36"
                    width="20"
                  >
                    <path
                      d="M16 6V2H2v32h14v-4H6V6h10z"
                    />
                    <path
                      d="M24.82 8.81L22 11.64 26.36 16H8v4h18.36L22 24.36l2.82 2.83 9.2-9.19-9.2-9.19z"
                    />
                  </svg>
                  <span>
                    Uitloggen
                  </span>
                </button>
              </li>
            </ul>
          </nav>
        </nav>
        <div
          class="sc-caSCKo cVWIld"
        />
      </header>
    </div>
  </div>
</div>
`;
